# utilcli

./: .gitignore  Readme.md  pyproject.toml
utilcli/: main.py
utilcli/commands/: __init__.py  porkbun.py  shlink.py  utilapi.py
utilcli/modules/: CommandResponse.py  PorkbunAPI.py  ShlinkAPI.py  UtilAPI.py  __init__.py
utilcli/utility/: __init__.py  utility.py
