[tool.poetry]
name = "utilcli"
version = "0.1.0"
description = ""
authors = ["Daniel Wijaya <dwjy27@gmail.com>"]

[tool.black]
line-length = 119

[tool.poetry.scripts]
util = "utilcli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.4.0"}
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
